--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Paper and README files
+# Cambio 2
 # https://github.community/t5/How-to-use-Git-and-GitHub/How-can-I-download-a-specific-folder-from-a-GitHub-repo/td-p/88
 XGBoost - Tianqi Chen (Paper).pdf
 LICENSE
